book images in search result now have fixed size, fix multi-line comment getting squashed in one line in quote

--- a/static/css/styles.scss.css
+++ b/static/css/styles.scss.css
@@ -9,15 +9,26 @@ body {
   min-height: 100vh;
   margin: 0; }
 
+input[type='number'] {
+  -moz-appearance: textfield;
+  /*For FireFox*/ }
+  input[type='number']::-webkit-inner-spin-button {
+    /*For Webkits like Chrome and Safari*/
+    -webkit-appearance: none;
+    margin: 0; }
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+  outline: none;
+  outline-width: 0px; }
+
 footer {
   min-height: 50px; }
 
 main {
   flex: 1; }
-
-.book-thumb {
-  max-width: 100px;
-  max-height: 150px; }
 
 .text-justify {
   text-align: justify; }
@@ -54,8 +65,7 @@ h6 {
   margin-bottom: 12px; }
 
 .container {
-  width: 80%;
-  margin-top: 20px; }
+  width: 80%; }
 
 .sidebar {
   width: 25%;
@@ -75,11 +85,6 @@ h6 {
   padding: 15px;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
   text-align: center; }
-
-.book-card img {
-  width: 150px;
-  height: 200px;
-  background: gray; }
 
 .navbar {
   width: 100%;
@@ -109,8 +114,7 @@ h6 {
   max-width: 550px; }
 
 .form-control {
-  border-radius: 50px;
-  padding: 8px 15px; }
+  border-radius: 0px; }
 
 .btn-custom {
   background-color: #b0b1b3;
@@ -130,29 +134,8 @@ h6 {
   white-space: nowrap;
   overflow: hidden; }
 
-.entry-thumb {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px; }
-
-.card-custom {
-  display: flex;
-  flex-direction: row;
-  overflow: hidden;
-  margin-bottom: 20px;
-  border-radius: 10px;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s; }
-  .card-custom:hover {
-    transform: scale(1.02); }
-
-.card-body {
-  padding: 15px; }
-
 .sort-container {
   display: flex;
-  justify-content: flex-end;
   align-items: center;
   margin-bottom: 20px; }
   .sort-container label {
@@ -169,5 +152,44 @@ h6 {
   font-size: 1.2rem;
   font-weight: bold;
   color: #888; }
+
+.card-book-thumb {
+  object-fit: cover; }
+
+.card-custom {
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s; }
+  .card-custom:hover {
+    transform: scale(1.02); }
+
+@media (min-width: 993px) {
+  .book-thumb,
+  .card-book-thumb {
+    height: 320px;
+    max-width: 200px;
+    width: 200px;
+    max-height: 320px; }
+  .result-card-body {
+    max-height: 320px;
+    height: 320px; } }
+
+@media (max-width: 992px) and (min-width: 0px) {
+  .book-thumb,
+  .card-book-thumb {
+    height: 240px;
+    max-width: 150px;
+    width: 150px;
+    max-height: 240px; }
+  .result-card-body {
+    max-height: 240px;
+    height: 240px; }
+  .card-custom {
+    max-width: 750px;
+    margin-bottom: 10px; } }
 
 /*# sourceMappingURL=styles.scss.css.map */
